feat(ui): added delete option in view all patient page(with comments).

--- a/doctor_web/templates/dashboard.html
+++ b/doctor_web/templates/dashboard.html
@@ -28,7 +28,7 @@
         </form>
         <hr class="bg-light">
         
-        <!--view patient feat-->
+        <!-- NEW view patient feature-->
         <a href="{% url 'view_all_patients' %}" class="btn btn-light w-100 mt-3">
             View All Patients
         </a>
